# brickdata

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
LICENSES/: REBRICKABLE.md
crates/brickdata/: Cargo.toml
crates/brickdata/src/: extract.rs  fetch.rs  lib.rs  pin.rs
crates/brickdata/tests/: extract_tests.rs  fetch_tests.rs  pin_tests.rs
crates/catalog-builder/: Cargo.toml
crates/catalog-builder/src/: build.rs  fetch.rs  ldraw_part.rs  lib.rs  main.rs  refresh_colors.rs  util.rs
crates/catalog-builder/src/core/: blob.rs  catalog.rs  categories.rs  color_names.ron  colors.rs  mod.rs
crates/catalog-builder/src/refresh_parts/: api.rs  mod.rs  pin.rs
crates/catalog-builder/tests/: build.rs
crates/catalog-builder/tests/fixtures/api/: colors-page-20.json  parts-page-sample.json
crates/catalog-builder/tests/fixtures/ldraw/: README.md
data/rebrickable/: color_excludes.ron  colors.json  part_crossrefs.ron
docs/: cleaning.md
lib/: common.sh  manifest.sh
pins/: catalog-2026-07-07.ron  catalog-2026-07-19.ron  catalog-2026-07-19a.ron  ldraw-2026-06-01.ron  rebrickable-2026-06-01.ron
