[workspace]
resolver = "3"
members = ["crates/brickdata", "crates/catalog-builder"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bkfunk/brickdata"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.10"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
ureq = "2"
tempfile = "3"
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = "0.32"
csv = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
